---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: ????
  Info:
    - Use the og sprites
    - Color the water black
    - Give deepwater the same black texture treatment
    - use our own entity and item
    - Render them on the surface layer
    - Attempt 1 at drawing the planet upright
    - Attempt 2 at drawing the planet upright
    - Starmap icon
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2025. 07. 03
  Info:
    - Initial commit