@@ -10,6 +10,7 @@ Date: ????
     - Attempt 1 at drawing the planet upright
     - Attempt 2 at drawing the planet upright
     - Starmap icon
+    - Fix stray transparent pixels in common body
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.1
 Date: 2025. 07. 03
